// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileStats Component Snapshot Stability renders consistently with maximum values 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 10,
      "marginBottom": 8,
      "marginTop": 4,
      "paddingHorizontal": 16,
    }
  }
  testID="profile-stats-container"
>
  <View
    accessibilityLabel="9999 jobs completed"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "elevation": 1,
        "flex": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      }
    }
    testID="jobs-stat"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "height": 36,
            "justifyContent": "center",
            "marginBottom": 8,
            "width": 36,
          },
          {
            "backgroundColor": "#DCEAE5",
          },
        ]
      }
    >
      <Text
        color="#3F8C7A"
        name="briefcase"
        size={18}
      >
        briefcase
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#1A2520",
          "fontSize": 22,
          "fontWeight": "800",
          "letterSpacing": -0.5,
        }
      }
      testID="jobs-value"
    >
      9999
    </Text>
    <Text
      style={
        {
          "color": "#4A5751",
          "fontSize": 12,
          "fontWeight": "500",
          "marginTop": 2,
        }
      }
    >
      Jobs Done
    </Text>
  </View>
  <View
    accessibilityLabel="Rating: 5 out of 5"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "elevation": 1,
        "flex": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      }
    }
    testID="rating-stat"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "height": 36,
            "justifyContent": "center",
            "marginBottom": 8,
            "width": 36,
          },
          {
            "backgroundColor": "#FBE9CB",
          },
        ]
      }
    >
      <Text
        color="#E26B4F"
        name="star"
        size={18}
      >
        star
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#1A2520",
          "fontSize": 22,
          "fontWeight": "800",
          "letterSpacing": -0.5,
        }
      }
      testID="rating-value"
    >
      5.0
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 1,
          "marginTop": 4,
        }
      }
    >
      <Text
        color="#E26B4F"
        name="star"
        size={10}
      >
        star
      </Text>
      <Text
        color="#E26B4F"
        name="star"
        size={10}
      >
        star
      </Text>
      <Text
        color="#E26B4F"
        name="star"
        size={10}
      >
        star
      </Text>
      <Text
        color="#E26B4F"
        name="star"
        size={10}
      >
        star
      </Text>
      <Text
        color="#E26B4F"
        name="star"
        size={10}
      >
        star
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="9999 reviews"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "elevation": 1,
        "flex": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      }
    }
    testID="reviews-stat"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "height": 36,
            "justifyContent": "center",
            "marginBottom": 8,
            "width": 36,
          },
          {
            "backgroundColor": "#DBEAFE",
          },
        ]
      }
    >
      <Text
        color="#3B82F6"
        name="chatbubbles"
        size={18}
      >
        chatbubbles
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#1A2520",
          "fontSize": 22,
          "fontWeight": "800",
          "letterSpacing": -0.5,
        }
      }
      testID="reviews-value"
    >
      9999
    </Text>
    <Text
      style={
        {
          "color": "#4A5751",
          "fontSize": 12,
          "fontWeight": "500",
          "marginTop": 2,
        }
      }
    >
      Reviews
    </Text>
  </View>
</View>
`;

exports[`ProfileStats Component Snapshot Stability renders consistently with typical values 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 10,
      "marginBottom": 8,
      "marginTop": 4,
      "paddingHorizontal": 16,
    }
  }
  testID="profile-stats-container"
>
  <View
    accessibilityLabel="42 jobs completed"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "elevation": 1,
        "flex": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      }
    }
    testID="jobs-stat"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "height": 36,
            "justifyContent": "center",
            "marginBottom": 8,
            "width": 36,
          },
          {
            "backgroundColor": "#DCEAE5",
          },
        ]
      }
    >
      <Text
        color="#3F8C7A"
        name="briefcase"
        size={18}
      >
        briefcase
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#1A2520",
          "fontSize": 22,
          "fontWeight": "800",
          "letterSpacing": -0.5,
        }
      }
      testID="jobs-value"
    >
      42
    </Text>
    <Text
      style={
        {
          "color": "#4A5751",
          "fontSize": 12,
          "fontWeight": "500",
          "marginTop": 2,
        }
      }
    >
      Jobs Done
    </Text>
  </View>
  <View
    accessibilityLabel="Rating: 4.8 out of 5"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "elevation": 1,
        "flex": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      }
    }
    testID="rating-stat"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "height": 36,
            "justifyContent": "center",
            "marginBottom": 8,
            "width": 36,
          },
          {
            "backgroundColor": "#FBE9CB",
          },
        ]
      }
    >
      <Text
        color="#E26B4F"
        name="star"
        size={18}
      >
        star
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#1A2520",
          "fontSize": 22,
          "fontWeight": "800",
          "letterSpacing": -0.5,
        }
      }
      testID="rating-value"
    >
      4.8
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 1,
          "marginTop": 4,
        }
      }
    >
      <Text
        color="#E26B4F"
        name="star"
        size={10}
      >
        star
      </Text>
      <Text
        color="#E26B4F"
        name="star"
        size={10}
      >
        star
      </Text>
      <Text
        color="#E26B4F"
        name="star"
        size={10}
      >
        star
      </Text>
      <Text
        color="#E26B4F"
        name="star"
        size={10}
      >
        star
      </Text>
      <Text
        color="#E26B4F"
        name="star-half"
        size={10}
      >
        star-half
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="127 reviews"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "elevation": 1,
        "flex": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      }
    }
    testID="reviews-stat"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "height": 36,
            "justifyContent": "center",
            "marginBottom": 8,
            "width": 36,
          },
          {
            "backgroundColor": "#DBEAFE",
          },
        ]
      }
    >
      <Text
        color="#3B82F6"
        name="chatbubbles"
        size={18}
      >
        chatbubbles
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#1A2520",
          "fontSize": 22,
          "fontWeight": "800",
          "letterSpacing": -0.5,
        }
      }
      testID="reviews-value"
    >
      127
    </Text>
    <Text
      style={
        {
          "color": "#4A5751",
          "fontSize": 12,
          "fontWeight": "500",
          "marginTop": 2,
        }
      }
    >
      Reviews
    </Text>
  </View>
</View>
`;

exports[`ProfileStats Component Snapshot Stability renders consistently with zero values 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 10,
      "marginBottom": 8,
      "marginTop": 4,
      "paddingHorizontal": 16,
    }
  }
  testID="profile-stats-container"
>
  <View
    accessibilityLabel="0 jobs completed"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "elevation": 1,
        "flex": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      }
    }
    testID="jobs-stat"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "height": 36,
            "justifyContent": "center",
            "marginBottom": 8,
            "width": 36,
          },
          {
            "backgroundColor": "#DCEAE5",
          },
        ]
      }
    >
      <Text
        color="#3F8C7A"
        name="briefcase"
        size={18}
      >
        briefcase
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#1A2520",
          "fontSize": 22,
          "fontWeight": "800",
          "letterSpacing": -0.5,
        }
      }
      testID="jobs-value"
    >
      0
    </Text>
    <Text
      style={
        {
          "color": "#4A5751",
          "fontSize": 12,
          "fontWeight": "500",
          "marginTop": 2,
        }
      }
    >
      Jobs Done
    </Text>
  </View>
  <View
    accessibilityLabel="Rating: 0 out of 5"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "elevation": 1,
        "flex": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      }
    }
    testID="rating-stat"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "height": 36,
            "justifyContent": "center",
            "marginBottom": 8,
            "width": 36,
          },
          {
            "backgroundColor": "#FBE9CB",
          },
        ]
      }
    >
      <Text
        color="#E26B4F"
        name="star"
        size={18}
      >
        star
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#1A2520",
          "fontSize": 22,
          "fontWeight": "800",
          "letterSpacing": -0.5,
        }
      }
      testID="rating-value"
    >
      —
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 1,
          "marginTop": 4,
        }
      }
    >
      <Text
        color="#E26B4F"
        name="star-outline"
        size={10}
      >
        star-outline
      </Text>
      <Text
        color="#E26B4F"
        name="star-outline"
        size={10}
      >
        star-outline
      </Text>
      <Text
        color="#E26B4F"
        name="star-outline"
        size={10}
      >
        star-outline
      </Text>
      <Text
        color="#E26B4F"
        name="star-outline"
        size={10}
      >
        star-outline
      </Text>
      <Text
        color="#E26B4F"
        name="star-outline"
        size={10}
      >
        star-outline
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="0 reviews"
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "elevation": 1,
        "flex": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      }
    }
    testID="reviews-stat"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "height": 36,
            "justifyContent": "center",
            "marginBottom": 8,
            "width": 36,
          },
          {
            "backgroundColor": "#DBEAFE",
          },
        ]
      }
    >
      <Text
        color="#3B82F6"
        name="chatbubbles"
        size={18}
      >
        chatbubbles
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#1A2520",
          "fontSize": 22,
          "fontWeight": "800",
          "letterSpacing": -0.5,
        }
      }
      testID="reviews-value"
    >
      0
    </Text>
    <Text
      style={
        {
          "color": "#4A5751",
          "fontSize": 12,
          "fontWeight": "500",
          "marginTop": 2,
        }
      }
    >
      Reviews
    </Text>
  </View>
</View>
`;
